Visitors/MusicinatorParser.java
// Generated from MusicinatorParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MusicinatorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CHORD=1, SOUND=2, INT=3, DURATION=4, DOUBLE=5, ADD=6, SUB=7, MUL=8, DIV=9, 
		REM=10, BIGR=11, BIGE=12, SMLR=13, SMLE=14, EQLS=15, DIFS=16, ARROW=17, 
		ON=18, IN=19, AT=20, BAR=21, AND=22, COMMA=23, COLON=24, EQUAL=25, LOOP=26, 
		PLAY=27, TIMES=28, AFTER=29, SEMICOLON=30, ALWAYS=31, GETINT=32, SEQUENTIALLY=33, 
		IF=34, ELSE=35, ELIF=36, FOR=37, NUM_LIT=38, SQ_LIT=39, PF_LIT=40, INST_LIT=41, 
		OPEN_PR=42, OPEN_SB=43, OPEN_BR=44, CLOSE_PR=45, CLOSE_SB=46, CLOSE_BR=47, 
		WORD=48, STRING=49, LINE_COMMENT=50, BLOCK_COMMENT=51, WS=52;
	public static final int
		RULE_main = 0, RULE_instructions = 1, RULE_assignment = 2, RULE_play = 3, 
		RULE_forStat = 4, RULE_ifStat = 5, RULE_expr = 6, RULE_sequence = 7, RULE_performance = 8, 
		RULE_number = 9, RULE_variable = 10, RULE_types = 11, RULE_condition = 12;
	public static final String[] ruleNames = {
		"main", "instructions", "assignment", "play", "forStat", "ifStat", "expr", 
		"sequence", "performance", "number", "variable", "types", "condition"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'->'", "'on'", "'in'", 
		"'at'", "'|'", "'and'", "','", "':'", "'='", "'loop'", "'play'", "'times'", 
		"'after'", "';'", "'always'", "'getInt'", "'sequentially'", "'if'", "'else'", 
		null, "'for'", "'number'", "'sequence'", "'performance'", "'instrument'", 
		"'('", "'['", "'{'", "')'", "']'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CHORD", "SOUND", "INT", "DURATION", "DOUBLE", "ADD", "SUB", "MUL", 
		"DIV", "REM", "BIGR", "BIGE", "SMLR", "SMLE", "EQLS", "DIFS", "ARROW", 
		"ON", "IN", "AT", "BAR", "AND", "COMMA", "COLON", "EQUAL", "LOOP", "PLAY", 
		"TIMES", "AFTER", "SEMICOLON", "ALWAYS", "GETINT", "SEQUENTIALLY", "IF", 
		"ELSE", "ELIF", "FOR", "NUM_LIT", "SQ_LIT", "PF_LIT", "INST_LIT", "OPEN_PR", 
		"OPEN_SB", "OPEN_BR", "CLOSE_PR", "CLOSE_SB", "CLOSE_BR", "WORD", "STRING", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MusicinatorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MusicinatorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MusicinatorParser.EOF, 0); }
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << LOOP) | (1L << PLAY) | (1L << AFTER) | (1L << IF) | (1L << FOR) | (1L << NUM_LIT) | (1L << SQ_LIT) | (1L << PF_LIT) | (1L << INST_LIT))) != 0)) {
				{
				{
				setState(26);
				instructions();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public PlayContext play() {
			return getRuleContext(PlayContext.class,0);
		}
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterInstructions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitInstructions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instructions);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM_LIT:
			case SQ_LIT:
			case PF_LIT:
			case INST_LIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				assignment();
				}
				break;
			case AT:
			case LOOP:
			case PLAY:
			case AFTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				play();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				forStat();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(37);
				ifStat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode WORD() { return getToken(MusicinatorParser.WORD, 0); }
		public TerminalNode EQUAL() { return getToken(MusicinatorParser.EQUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MusicinatorParser.SEMICOLON, 0); }
		public TerminalNode OPEN_SB() { return getToken(MusicinatorParser.OPEN_SB, 0); }
		public TerminalNode CLOSE_SB() { return getToken(MusicinatorParser.CLOSE_SB, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			types();
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_SB) {
				{
				setState(41);
				match(OPEN_SB);
				setState(42);
				match(CLOSE_SB);
				}
			}

			setState(45);
			match(WORD);
			setState(46);
			match(EQUAL);
			setState(47);
			expr(0);
			setState(48);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayContext extends ParserRuleContext {
		public PlayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_play; }
	 
		public PlayContext() { }
		public void copyFrom(PlayContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LoopPlayContext extends PlayContext {
		public TerminalNode LOOP() { return getToken(MusicinatorParser.LOOP, 0); }
		public PerformanceContext performance() {
			return getRuleContext(PerformanceContext.class,0);
		}
		public LoopPlayContext(PlayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterLoopPlay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitLoopPlay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitLoopPlay(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SimplePlayContext extends PlayContext {
		public TerminalNode PLAY() { return getToken(MusicinatorParser.PLAY, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(MusicinatorParser.SEMICOLON, 0); }
		public TerminalNode SEQUENTIALLY() { return getToken(MusicinatorParser.SEQUENTIALLY, 0); }
		public TerminalNode TIMES() { return getToken(MusicinatorParser.TIMES, 0); }
		public SimplePlayContext(PlayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterSimplePlay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitSimplePlay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitSimplePlay(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TimedPlayContext extends PlayContext {
		public PlayContext play() {
			return getRuleContext(PlayContext.class,0);
		}
		public TerminalNode AT() { return getToken(MusicinatorParser.AT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode AFTER() { return getToken(MusicinatorParser.AFTER, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ALWAYS() { return getToken(MusicinatorParser.ALWAYS, 0); }
		public TimedPlayContext(PlayContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterTimedPlay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitTimedPlay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitTimedPlay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayContext play() throws RecognitionException {
		PlayContext _localctx = new PlayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_play);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLAY:
				_localctx = new SimplePlayContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(PLAY);
				setState(51);
				expr(0);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEQUENTIALLY) {
					{
					setState(52);
					match(SEQUENTIALLY);
					}
				}

				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHORD) | (1L << SOUND) | (1L << INT) | (1L << DOUBLE) | (1L << BAR) | (1L << GETINT) | (1L << OPEN_PR) | (1L << OPEN_SB) | (1L << WORD))) != 0)) {
					{
					setState(55);
					expr(0);
					setState(56);
					match(TIMES);
					}
				}

				setState(60);
				match(SEMICOLON);
				}
				break;
			case AT:
			case AFTER:
				_localctx = new TimedPlayContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AT:
					{
					setState(62);
					match(AT);
					setState(63);
					expr(0);
					}
					break;
				case AFTER:
					{
					setState(64);
					match(AFTER);
					setState(65);
					variable();
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==ALWAYS) {
						{
						setState(66);
						match(ALWAYS);
						}
					}

					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(71);
				play();
				}
				break;
			case LOOP:
				_localctx = new LoopPlayContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				match(LOOP);
				setState(74);
				performance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStatContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(MusicinatorParser.FOR, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public List<TerminalNode> WORD() { return getTokens(MusicinatorParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(MusicinatorParser.WORD, i);
		}
		public TerminalNode IN() { return getToken(MusicinatorParser.IN, 0); }
		public TerminalNode OPEN_BR() { return getToken(MusicinatorParser.OPEN_BR, 0); }
		public TerminalNode CLOSE_BR() { return getToken(MusicinatorParser.CLOSE_BR, 0); }
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public ForStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterForStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitForStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForStatContext forStat() throws RecognitionException {
		ForStatContext _localctx = new ForStatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_forStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(FOR);
			setState(78);
			types();
			setState(79);
			match(WORD);
			setState(80);
			match(IN);
			setState(81);
			match(WORD);
			setState(82);
			match(OPEN_BR);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << LOOP) | (1L << PLAY) | (1L << AFTER) | (1L << IF) | (1L << FOR) | (1L << NUM_LIT) | (1L << SQ_LIT) | (1L << PF_LIT) | (1L << INST_LIT))) != 0)) {
				{
				{
				setState(83);
				instructions();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(CLOSE_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MusicinatorParser.IF, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> OPEN_BR() { return getTokens(MusicinatorParser.OPEN_BR); }
		public TerminalNode OPEN_BR(int i) {
			return getToken(MusicinatorParser.OPEN_BR, i);
		}
		public List<TerminalNode> CLOSE_BR() { return getTokens(MusicinatorParser.CLOSE_BR); }
		public TerminalNode CLOSE_BR(int i) {
			return getToken(MusicinatorParser.CLOSE_BR, i);
		}
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public List<TerminalNode> ELIF() { return getTokens(MusicinatorParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(MusicinatorParser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(MusicinatorParser.ELSE, 0); }
		public IfStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatContext ifStat() throws RecognitionException {
		IfStatContext _localctx = new IfStatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IF);
			setState(92);
			condition();
			setState(93);
			match(OPEN_BR);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << LOOP) | (1L << PLAY) | (1L << AFTER) | (1L << IF) | (1L << FOR) | (1L << NUM_LIT) | (1L << SQ_LIT) | (1L << PF_LIT) | (1L << INST_LIT))) != 0)) {
				{
				{
				setState(94);
				instructions();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(CLOSE_BR);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(101);
				match(ELIF);
				setState(102);
				condition();
				setState(103);
				match(OPEN_BR);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << LOOP) | (1L << PLAY) | (1L << AFTER) | (1L << IF) | (1L << FOR) | (1L << NUM_LIT) | (1L << SQ_LIT) | (1L << PF_LIT) | (1L << INST_LIT))) != 0)) {
					{
					{
					setState(104);
					instructions();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(CLOSE_BR);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(117);
				match(ELSE);
				setState(118);
				match(OPEN_BR);
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << LOOP) | (1L << PLAY) | (1L << AFTER) | (1L << IF) | (1L << FOR) | (1L << NUM_LIT) | (1L << SQ_LIT) | (1L << PF_LIT) | (1L << INST_LIT))) != 0)) {
					{
					{
					setState(119);
					instructions();
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				match(CLOSE_BR);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarExprContext extends ExprContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public VarExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterVarExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitVarExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitVarExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketArrayContext extends ExprContext {
		public TerminalNode OPEN_SB() { return getToken(MusicinatorParser.OPEN_SB, 0); }
		public TerminalNode CLOSE_SB() { return getToken(MusicinatorParser.CLOSE_SB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MusicinatorParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MusicinatorParser.COMMA, i);
		}
		public BracketArrayContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterBracketArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitBracketArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitBracketArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubExprContext extends ExprContext {
		public ExprContext e1;
		public Token op;
		public ExprContext e2;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(MusicinatorParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(MusicinatorParser.SUB, 0); }
		public AddSubExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterAddSubExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitAddSubExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitAddSubExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumRangeArrayContext extends ExprContext {
		public ExprContext e1;
		public ExprContext e2;
		public TerminalNode ARROW() { return getToken(MusicinatorParser.ARROW, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public NumRangeArrayContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterNumRangeArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitNumRangeArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitNumRangeArray(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PerExprContext extends ExprContext {
		public PerformanceContext performance() {
			return getRuleContext(PerformanceContext.class,0);
		}
		public PerExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterPerExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitPerExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicinatorParserVisitor ) return ((MusicinatorParserVisitor<? extends T>)visitor).visitPerExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SeqExprContext extends ExprContext {
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public SeqExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).enterSeqExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicinatorParserListener ) ((MusicinatorParserListener)listener).exitSeqExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
